objects/Account.object
<CustomObject>
  <fields>
        <fullName>Customer_Portal_Ping_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Portal Ping User</label>
        <referenceTo>Customer_Portal_Ping_User__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
  <fields>
        <fullName>HQ_DUNS_Number_New__c</fullName>
        <description>HQ DUNS Number -- Text field so there wouldn't be any commas in the number. New field instead of old HQ DUNS Number (Data Type - Number)</description>
        <label>HQ DUNS Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
  <fields>
        <fullName>Special_Programs__c</fullName>
        <description>Originally created by Mike Cohen and Tom Dowley in April, 2016, for the CVPP Pilot Program in NY, then extended to other programs. Used for reporting (example: Report to Con Ed on CVPP accounts that called the SPWR Contact Center).</description>
        <inlineHelpText>Indicates if this account is or was enrolled in a recognized SunPower Pilot program</inlineHelpText>
        <label>Special Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adders in EDDiE</fullName>
                </value>
                <value>
                    <fullName>Credit Prescreen</fullName>
                </value>
				<value>
                    <fullName>Dashboard PPI</fullName>
                </value>
                <value>
                    <fullName>Dealer Fee per Watt Pricing</fullName>
                </value>
                <value>
                    <fullName>Design Optimization</fullName>
                </value>
                <value>
                    <fullName>Dynamic Proposal</fullName>
                </value>
                <value>
                    <fullName>EDDiE Jr</fullName>
                </value>
                <value>
                    <fullName>Expedite Design Requests</fullName>
                </value>
                <value>
                    <fullName>Helix PPA program</fullName>
                </value>
                <value>
                    <fullName>Intercom Chat</fullName>
                </value>
                <value>
                    <fullName>PPI</fullName>
                </value>
                <value>
                    <fullName>Product Selection Modal</fullName>
                </value>
                <value>
                    <fullName>Projects Dashboard</fullName>
                </value>
                <value>
                    <fullName>Skedulo</fullName>
                </value>
                <value>
                    <fullName>SOA App Enabled</fullName>
                </value>
                <value>
                    <fullName>SPRIVAR</fullName>
                </value>
                <value>
                    <fullName>Storage - CVPP</fullName>
                </value>
                <value>
                    <fullName>Storage Enabled</fullName>
                </value>
                <value>
                    <fullName>Storage - Hawaii</fullName>
                </value>
                <value>
                    <fullName>Swell Storage</fullName>
                </value>
                <value>
                    <fullName>Tesla Certified</fullName>
                </value>
                <value>
                    <fullName>Thermostat - EcoBee</fullName>
                </value>
                <value>
                    <fullName>WattzOn Energy Usage</fullName>
                </value>
                <value>
                    <fullName>CVAR Intercom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
  <recordTypes>
        <fullName>Partner</fullName>
        <active>true</active>
        <description>Partner Account (Residential &amp; Commercial)</description>
        <label>Partner</label>
    </recordTypes>
</CustomObject>